--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </header>
     
     <main>
-        <section class="hero" style="background-image: url(./Hero\ section\ background.jpg);">
-            <div class="hero-content">
+        <section class="card" style="background-image: url(./Hero\ section\ background.jpg);">
+            <div class="card-content">
                 <h1>Welcome to Demo Logistics</h1>
-                <p id="hero-text">Your trusted partner in efficient and reliable logistics solutions.</p>
+                <p id="card-text">Your trusted partner in efficient and reliable logistics solutions.</p>
                 <a href="services.html" class="cta-button">Explore Our Services</a>
             </div>
         </section>
